tests/ui/issues/issue-11374.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11374.rs:26:15
   |
LL |     c.read_to(v);
   |       ------- ^
   |       |       |
   |       |       expected `&mut [u8]`, found `Vec<_>`
   |       |       help: consider mutably borrowing here: `&mut v`
   |       arguments to this method are incorrect
   |
   = note: expected mutable reference `&mut [u8]`
                         found struct `Vec<_>`
note: method defined here
  --> $DIR/issue-11374.rs:13:12
   |
LL |     pub fn read_to(&mut self, vec: &mut [u8]) {
   |            ^^^^^^^            --------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
